--- a/config.json
+++ b/config.json
@@ -1,8 +1,8 @@
 {
   "prefix": "!",
   "ses": "",
-  "sahip": ["796263552771817472"],
-  "token": "Nzk5MzI2NDU2NDcwOTYyMjM2.YAB8xQ.lhIxyErNwvv2Cf3bF2Lnnrr5qQI",
+  "sahip": ["618444525727383592"],
+  "token": "",
   "public": "public kategori",
   "register": "kayıt kategorisi",
   "terapi": "terapi",
